# nokhwa

./: Cargo.toml  README.md  flake.nix
nokhwa-bindings-linux/: Cargo.toml
nokhwa-bindings-linux/src/: lib.rs  v4l2.rs
nokhwa-bindings-macos/src/: lib.rs
nokhwa-bindings-windows/src/: lib.rs
nokhwa-core/: Cargo.toml
nokhwa-core/src/: camera.rs  control.rs  decoder.rs  error.rs  format_request.rs  frame_buffer.rs  frame_format.rs  lib.rs  platform.rs  properties.rs  ranges.rs  stream.rs  types.rs
src/: camera.rs  threaded.rs
src/backends/capture/: avfoundation.rs  browser_camera.rs  msmf_backend.rs  opencv_backend.rs  v4l2_backend.rs
